--- a/dendron.yml
+++ b/dendron.yml
@@ -83,6 +83,7 @@ preview:
     enableKatex: true
     automaticallyShowPreview: false
 publishing:
+    theme: custom
     enableFMTitle: true
     enableNoteTitleForLink: true
     enableMermaid: true
