--- a/notes/.obsidian/workspace
+++ b/notes/.obsidian/workspace
@@ -7,13 +7,8 @@
         "id": "7eee916555263282",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "root.md",
-            "mode": "source",
-            "backlinks": true,
-            "source": false
-          }
+          "type": "graph",
+          "state": {}
         }
       }
     ],
@@ -41,7 +36,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "file: devlog.jenkins",
+                "query": "tag:#areas",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -62,8 +57,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 259,
-    "collapsed": true
+    "width": 259
   },
   "right": {
     "id": "340adbf4124eab23",
@@ -79,7 +73,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "root.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -107,7 +100,6 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "root.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -132,14 +124,14 @@
   "active": "7eee916555263282",
   "lastOpenFiles": [
     "root.md",
+    "areas.genetics.md",
+    "areas.food.md",
+    "archive.Terminal lucidity.md",
+    "areas.death.md",
+    "areas.biases.md",
     "workbench.md",
-    "tags.phrases.md",
-    "devlog.jenkins.md",
-    "swipes.2022-03-17 01-46-43.md",
-    "devlog.runlevel.md",
-    "areas.devops.md",
-    "devlog.docker.md",
-    "devlog.AWS ECR.md",
-    "devlog.Connecting a Nodejs application to a MongoDB Docker container.md"
+    "inbox.load average.md",
+    "inbox.60 linux networking commands and scripts.md",
+    "devlog.systemd-networkd.md"
   ]
 }
